--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.4.0",
+    "chrome-aws-lambda": "^10.1.0",
     "next": "12.0.7",
     "next-seo": "^4.28.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-simple-typewriter": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.1",
