--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next-sitemap": "^1.6.203",
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
+    "puppeteer": "^13.0.1",
     "tailwindcss": "^3.0.8"
   }
 }
